tests/typing/good/testfile-block-3.scala

class C() { var x : AnyVal = {} }
object Main { def main(args: Array[String]) { } }
