tests/typing/bad/testfile-extends-7.scala

class C extends String {}
object Main { def main(args: Array[String]) { } }
